fix overflowing rate filter

--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,6 @@
   body {
     @apply bg-background text-foreground;
     font-family: inter;
-    overflow-x: hidden;
   }
 }
 
